# mle-pr-final

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  params.yaml  pyproject.toml
airflow/: Dockerfile
airflow/dags/: recsys_etl.py  recsys_train.py
mlflow_server/: run_mlflow.sh
monitoring/grafana/provisioning/dashboards/: dashboards.yml  overview.json
monitoring/prometheus/: prometheus.yml
notebooks/: eda.ipynb  experiments.ipynb
src/cart_driven_recsys/: api.py  config.py  covisit.py  etl.py  metrics.py  recommend.py  recommenders.py  sql.py  train.py
tests/: conftest.py  test_api.py
