[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cart-driven-recsys"
version = "0.1.0"
description = "cart-oriented recsys"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "fastapi>=0.115.0",
    "implicit>=0.7.2",
    "joblib>=1.4.2",
    "loguru>=0.7.2",
    "mlflow>=2.16.2",
    "numpy>=2.1.0",
    "pandas>=2.2.3",
    "prometheus-client>=0.21.0",
    "pydantic-settings>=2.6.1",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "uvicorn[standard]>=0.32.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pytest>=9.0.2",
    "ruff>=0.7.4",
    "seaborn>=0.13.2",
]